Добавление фильтра, добавление описания книги, добавление и обновление тестов